# ChangeLog for media-libs/freetype
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.95 2007/02/08 14:15:13 flameeyes Exp $

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/freetype-2.1.10-security_batch.patch, -freetype-2.1.10.ebuild,
  -freetype-2.1.10-r1.ebuild:
  Remove old vulnerable versions.

*freetype-2.2.1-r1 (08 Feb 2007)

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/freetype-2.2.1-foobillard.patch, metadata.xml,
  -freetype-2.2.1.ebuild, +freetype-2.2.1-r1.ebuild:
  Add patch to fix bug #149723. I'll take care of unmasking freetype 2.2, so
  add restricted maintainership in metadata.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  freetype-2.1.9-r1.ebuild, freetype-2.1.10.ebuild,
  freetype-2.1.10-r1.ebuild, freetype-2.1.10-r2.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  01 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> freetype-2.2.1.ebuild:
  Export GNUMAKE variable to let it build when make is not GNU make.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> freetype-2.1.10-r2.ebuild:
  Marked stable on mips.

  04 Sep 2006; Mike Frysinger <vapier@gentoo.org> freetype-2.1.10-r2.ebuild:
  If USE=doc, make sure extraneous docs are actually generated.

  04 Jul 2006; Joshua Jackson <tsunam@gentoo.org> freetype-2.1.10-r2.ebuild:
  Stable x86; bug #124828

  03 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  freetype-2.1.10-r2.ebuild:
  Stable on sparc wrt security #124828

  03 Jul 2006; Thomas Cort <tcort@gentoo.org> freetype-2.1.10-r2.ebuild:
  Stable on amd64 wrt security Bug #124828.

  01 Jul 2006; Thomas Cort <tcort@gentoo.org> freetype-2.1.10-r2.ebuild:
  Stable on alpha wrt security Bug #124828.

  01 Jul 2006; Lars Weiler <pylon@gentoo.org> freetype-2.1.10-r2.ebuild:
  Stable on ppc; bug #124828.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> freetype-2.1.10-r2.ebuild:
  Stable on ppc64; bug #124828
