@@ -1,0 +1,6 @@
+MD5 11e1186ca5520c5a284fa0a03f652035 freetype-2.3.1.tar.bz2 1247997
+RMD160 85bf5f82f1036fe533fa5a9802da1682d7c18e8d freetype-2.3.1.tar.bz2 1247997
+SHA256 be38eecd22880089223dc7e49ac79ce4fdfd1cb7ea09b3a4ef9bd1966f0d6155 freetype-2.3.1.tar.bz2 1247997
+MD5 15896b248192283c9891cc157e5793d7 freetype-doc-2.3.1.tar.bz2 98643
+RMD160 07d65ab6635cfd827b94511e968eb9d19129839e freetype-doc-2.3.1.tar.bz2 98643
+SHA256 99becb0256bce96de14e4f57065c5d0c0db72f851eced8bd58c05a3a7551c593 freetype-doc-2.3.1.tar.bz2 98643
