@@ -5,7 +5,7 @@
 <maintainer>
   <email>foser@gentoo.org</email>
 </maintainer>
-<maintainer restrict="=media-libs/freetype-2.2*">
+<maintainer restrict=">=media-libs/freetype-2.2">
   <email>flameeyes@gentoo.org</email>
   <description>
     Assign to me bugs that come from versions 2.2, as I unmasked it myself.
